fix(nav): let series nav items wrap

--- a/_src/assets/css/card.css
+++ b/_src/assets/css/card.css
@@ -140,9 +140,5 @@
     display: flex;
     flex-flow: row wrap;
     row-gap: var(--space-2xs);
-
-    li {
-      white-space: nowrap;
-    }
   }
 }
